# jito-rewards-ncn

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  rust-toolchain.toml
.cargo/: config.toml  programs.env
cli/: Cargo.toml
cli/src/: cli_args.rs
clients/js/weight_table_client/accounts/: index.ts  weightTable.ts
clients/js/weight_table_client/errors/: jitoWeightTable.ts
clients/js/weight_table_client/instructions/: finalizeWeightTable.ts  index.ts  initializeWeightTable.ts  updateWeightTable.ts
clients/js/weight_table_client/programs/: index.ts  jitoWeightTable.ts
clients/js/weight_table_client/types/: index.ts  weight.ts  weightEntry.ts
clients/rust/weight_table_client/: Cargo.toml
docs/: home.md
docs/design/: design.md
idl/: jito_weight_table.json
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
integration_tests/tests/: tests.rs
reward_core/: Cargo.toml
reward_core/src/: discriminators.rs  epoch_reward_distribution_marker.rs  epoch_reward_merkle_root.rs  epoch_reward_merkle_root_ticket.rs  epoch_reward_price_table.rs  error.rs  lib.rs  merkle_root.rs  reward_config.rs  reward_dropbox.rs  token_table.rs
reward_program/: Cargo.toml
reward_program/src/: close_marker_accounts.rs  delinquent_to_latest.rs  deposit_rewards.rs  distribute_crank.rs  dropbox_to_latest.rs  initialize_config.rs  initialize_epoch_reward_merkle_root.rs  initialize_epoch_reward_merkle_root_ticket.rs  lib.rs  restaking_helpers.rs  slash.rs  submit_ticket.rs  update_ticket_stake.rs
reward_sdk/: Cargo.toml
reward_sdk/src/: error.rs  instruction.rs  lib.rs
scripts/: generate-clients.js
shank_cli/: Cargo.toml
shank_cli/src/: main.rs
weight_table_core/: Cargo.toml
weight_table_core/src/: config.rs  discriminators.rs  error.rs  lib.rs  redacted_config.rs  weight.rs  weight_table.rs
weight_table_program/: Cargo.toml
weight_table_program/src/: copy_weight_table.rs  finalize_weight_table.rs  initialize_weight_table.rs  lib.rs  update_weight_table.rs
weight_table_sdk/: Cargo.toml
weight_table_sdk/src/: instruction.rs  lib.rs
