[workspace]
members = [
    "cli",
    "integration_tests",
    "reward_core",
    "reward_program",
    "reward_sdk",
    "weight_table_core",
    "weight_table_program",
    "weight_table_sdk"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.1"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/restaking"
homepage = "https://jito.network/"
license = "Apache License 2.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
anyhow = "1.0.86"
assert_matches = "1.5.0"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
const_str_to_pubkey = "0.1.1"
envfile = "0.2.1"
env_logger = "0.10.2"
log = "0.4.22"
matches = "0.1.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = "~1.18"
solana-cli-config = "~1.18"
solana-program = "~1.18"
solana-program-test = "~1.18"
solana-sdk = "~1.18"
solana-rpc-client = "~1.18"
solana-rpc-client-api = "~1.18"
solana-security-txt = "1.1.1"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
syn = "2.0.72"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
jito-weight-table-core = { path = "./weight_table_core", version="0.0.1"}
jito-weight-table-program = { path = "./weight_table_program", version="0.0.1"}
jito-weight-table-sdk = { path = "./weight_table_sdk", version="0.0.1"}
jito-reward-core = { path = "./reward_core", version = "=0.0.1" }
jito-reward-program = { path = "./reward_program", version = "=0.0.1" }
jito-reward-sdk = { path = "./reward_sdk", version = "=0.0.1" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-account-traits-derive = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-jsm-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-program = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-restaking-sdk = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-program = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
jito-vault-sdk = { git = "https://github.com/jito-foundation/restaking.git", version = "=0.0.1" }
